--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -18,7 +18,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
-    <title> 회원 가입 페이지 </title>
+    <title> login 페이지 </title>
 </head>
 <body style="background-color: #FAFAFA">
     <div style="display :flex ;flex-direction: column ; justify-content: center ; align-items:center; width : 100%">
@@ -43,7 +43,7 @@
         </div>
 
         <div style="padding :20px ; text-align:center ; border : solid 1px rgba(200,200,200, 1); width :300px; height:100px ; margin-top : 30px; background:white">
-            <div>계정이 없으신가요 ? <a href = "join">가입하기</a></div>
+            <div>계정이 없으신가요 ? <a href = "{% url 'join' %}">가입하기</a></div>
         </div>
    </div>
 
@@ -62,7 +62,7 @@
             method: "POST",
             dataType: "json",
             success: function (data){
-            location.replace('/main');
+                location.replace('{% url 'main' %}');
             },
             error:function (request, status, error){
                 let data = JSON.parse(request.responseText);
@@ -71,9 +71,9 @@
             },
             complete: function () {
             }
-        })
+        });
 
-    })
+    });
 </script>
 
 
