--- a/templates/jinstagram/main.html
+++ b/templates/jinstagram/main.html
@@ -264,7 +264,7 @@
                 <a class="navbar-brand" href=""><span class="material-icons-outlined" style = "color:black ">home</span></a>
                     <span class="material-icons-outlined">favorite</span>
                     <span class="material-icons-outlined">explore</span>
-                    <span class="material-icons-outlined" id="nav_bar_add_box">add_box</span>
+                    <span class="material-icons-outlined" id="nav_bar_add_box" style = "cursor : pointer">add_box</span>
 
                 <!-- profile drop down -->
                 <div class="dropdown" style=" width:25px ; height:25px">
@@ -521,7 +521,7 @@
                 이미지 up load 게시하기
             </div>
             <div id = "close_first_modal">
-                <span class="material-symbols-outlined"  style="background-color: gray">close</span>
+                <span class="material-symbols-outlined"  style="background-color: gray ; cursor:pointer">close</span>
             </div>
         </div>
         <div id = "img_upload_space_1" class="img_upload_space" style="display:flex ; justify-content:center ; align-items:center ;font-weight: bold ; background-color: orange ; width :780px ; height:550px">
