--- a/templates/jinstagram/main.html
+++ b/templates/jinstagram/main.html
@@ -541,7 +541,7 @@
                 올라온 이미지에 대한 처리 입력하기
             </div>
             <div id = "close_second_modal">
-                <span class="material-symbols-outlined"  style="background-color: gray">close</span>
+                <span class="material-symbols-outlined"  style="background-color: gray ; cursor : pointer">close</span>
             </div>
         </div>
 
