applied modified logout files

--- a/templates/jinstagram/main.html
+++ b/templates/jinstagram/main.html
@@ -279,7 +279,7 @@
                     <ul class="dropdown-menu" style = "margin-left: -158px ; ">
                         <li><a class="dropdown-item" href="/content/profile">profile</a></li>
                         <li><hr class = " dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">logout</a></li>
+                        <li><a id ="logout_link" class="dropdown-item" href="#">logout</a></li>
                     </ul>
                 </div>
             </div>
@@ -587,7 +587,7 @@
     let files ;
 
     <!-- 애드 박스를 클릭하는 동작 -->
-
+ $(document).ready(function() {
     $('#nav_bar_add_box').click(function(event) {
         $('#first_modal').css({
             display: 'flex'
@@ -852,9 +852,31 @@
 
     })
 
+   console.log("스크립트 파일 로드 완료");
+   console.log("로그아웃 링크 요소:", $('#logout_link'));
 
+   $('#logout_link').click(function(event) {
+        // a 태그의 기본 동작(페이지 이동)을 막습니다.
+        console.log("로그아웃 링크가 클릭되었습니다!");
+        event.preventDefault();
 
+        $.ajax({
+            url: "{% url 'user:logout' %}",
+            method: "GET",
+            success: function(response) {
+                console.log(response.message); // "로그아웃 되었습니다."
 
+                // 👇 로그아웃 성공 응답을 받은 후, JavaScript가 직접 로그인 페이지로 이동시킵니다.
+                window.location.replace("{% url 'user:login' %}");
+            },
+            error: function(request, status, error) {
+                alert("로그아웃에 실패했습니다.");
+                console.log(error);
+            }
+        });
+   });
+
+ })
 </script>
 
 
