--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -41,7 +41,16 @@
 
             <button id = "login_button" style = "width : 100%" type="button" class="btn btn-primary"> 로그인 버튼</button>
         </div>
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-danger" role="alert">  {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
 
+        <form method="post" action="/user/login">
+            {% csrf_token %}
+        </form>
         <div style="padding :20px ; text-align:center ; border : solid 1px rgba(200,200,200, 1); width :300px; height:100px ; margin-top : 30px; background:white">
             <div>계정이 없으신가요 ? <a href = "{% url 'join' %}">가입하기</a></div>
         </div>
@@ -57,16 +66,20 @@
             url: "/user/login",
             data: {
                 email: email,
-                password: password
+                password: password,
+                csrfmiddlewaretoken: '{{ csrf_token }}'
             },
             method: "POST",
             dataType: "json",
-            success: function (data){
-                location.replace('{% url 'main' %}');
+            success: function (response) {
+                console.log(response);
+                alert(response.message);
+                // 로그인 성공 시 메인 페이지로 이동
+                window.location.replace("/main/");
             },
             error:function (request, status, error){
                 let data = JSON.parse(request.responseText);
-                console.log(data.message);
+
                 alert(data.message);
             },
             complete: function () {
