third and add cursor pointer emodified cd up load

--- a/templates/content/profile.html
+++ b/templates/content/profile.html
@@ -584,10 +584,11 @@
                 이미지 삽입하기
             </div>
             <div id = "close_first_modal">
-                <span class="material-symbols-outlined"  style="background-color: gray">close</span>
+                <span class="material-symbols-outlined"  style="background-color: gray ; cursor : pointer">close</span>
             </div>
         </div>
-        <div id = "img_upload_space_1" class="img_upload_space" style="background-color: orange ; width :780px ; height:550px">
+        <div id = "img_upload_space_1" class="img_upload_space" style="display:flex ; justify-content:center ; align-items:center ;font-weight: bold ; background-color: orange ; width :780px ; height:550px">
+            ( windows에서 탐색기를 열어 사진을 선택하여  여기로  drag & drop 하세요)
         </div>
     </div>
 </div>
@@ -603,7 +604,7 @@
                 올라온 이미지에 대한 처리 입력하기
             </div>
             <div id = "close_second_modal">
-                <span class="material-symbols-outlined"  style="background-color: gray">close</span>
+                <span class="material-symbols-outlined"  style="background-color: gray ; cursor : pointer">close</span>
             </div>
         </div>
 
