8th modified cd up load

--- a/templates/content/profile.html
+++ b/templates/content/profile.html
@@ -243,7 +243,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position:fixed ; flex-wrap:nowrap; width : 100%; z-index : 10">
     <div class="container-fluid d-flex" style="display:flex ; justify-content: space-between ">
         <!-- 여기부터 왼쪽 brand icon -->
-        <a class="navbar-brand" href="/content/main"><img style="width : 50px"
+        <a class="navbar-brand" href="/content"><img style="width : 50px"
                                               src="https://cdn.pixabay.com/photo/2015/04/08/15/09/daisies-712892_1280.jpg"/>
         </a>
         <input class="form-control me-2 flex-glow-1" type="search" placeholder="Search" aria-label="Search"/>
@@ -259,7 +259,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
             <div class="d-flex align-items-center" style="padding-left : 20px ; width: 200px; display: flex; align-items: center ; justify-content: space-between ">
-                <a href = "/content/main"><span class="material-symbols-outlined" style ="color:black">home</span></a>
+                <a href = "/content"><span class="material-symbols-outlined" style ="color:black">home</span></a>
                     <span class="material-symbols-outlined">favorite</span>
                     <span class="material-symbols-outlined">explore</span>
                     <span class="material-symbols-outlined" id="nav_bar_add_box" style = "cursor:pointer">add_box</span>
